scc: fix output directory

--- a/scc/CMakeLists.txt
+++ b/scc/CMakeLists.txt
@@ -12,4 +12,11 @@ create_executable(scc
 	${SCC_LIB_DIR}
 )
 
-target_compile_definitions(scc PRIVATE _CRT_SECURE_NO_WARNINGS)
+target_compile_definitions(scc
+	PRIVATE _CRT_SECURE_NO_WARNINGS
+)
+
+set_target_properties(scc
+	PROPERTIES
+	LIBRARY_OUTPUT_DIRECTORY ${SCC_BIN_DIR}
+)
