change source organization #2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,10 @@
 cmake_minimum_required(VERSION 3.4.3)
 
 include("cmake/config.cmake")
-include("cmake/test.cmake")
-include("cmake/module.cmake")
-include("cmake/wrap.cmake")
+include("cmake/lib.cmake")
 
 project(scc)
 
 add_subdirectory(lib)
-add_subdirectory(scc)
+add_subdirectory(include)
+add_subdirectory(tools)
