ssa: add expression generation

--- a/include/scc/ssa/CMakeLists.txt
+++ b/include/scc/ssa/CMakeLists.txt
@@ -9,6 +9,9 @@ add_scc_target_sources(ssa
 	ssa-branch.h
 	ssa-printer.h
 	ssa-module.h
+	ssa-function.h
 	ssaizer.h
-	ssa-ir.h
+	ssaize-expr.h
+	ssaize-stmt.h
+	ssaize-decl.h
 )
