--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,4 +3,4 @@ add_subdirectory(tree)
 add_subdirectory(c)
 add_subdirectory(ssa)
 add_subdirectory(codegen)
-add_subdirectory(compiler)
+add_subdirectory(cc)
