--- a/lib/scl/CMakeLists.txt
+++ b/lib/scl/CMakeLists.txt
@@ -1,15 +1,14 @@
 add_scc_lib(scl
 	file.c
-	htab.c
 	malloc.c
 	args.c
 	membuf.c
-	sstring.c
+	strpool.c
+	string.c
 	char-info.c
 	heap-debug.c
 	read-write.c
 	value.c
-	dseq.c
 	misc.c
 	memory.c
 
