move preprocessor lexer to separate file

--- a/include/scc/c/CMakeLists.txt
+++ b/include/scc/c/CMakeLists.txt
@@ -21,6 +21,7 @@ add_scc_target_sources(c
 	c-sema-stmt.h
 	c-info.h
 	c-preprocessor.h
+	c-preprocessor-lexer.h
 	c-printer.h
 	c-env.h
 	c-token-kind.inc
