c-preprocessor: move directive-handling to separate file

--- a/include/scc/c/CMakeLists.txt
+++ b/include/scc/c/CMakeLists.txt
@@ -23,6 +23,7 @@ add_scc_target_sources(c
 	c-info.h
 	c-preprocessor.h
 	c-preprocessor-lexer.h
+	c-preprocessor-directive.h
 	c-token-lexer.h
 	c-macro.h
 	c-macro-lexer.h
