--- a/lib/ssa/CMakeLists.txt
+++ b/lib/ssa/CMakeLists.txt
@@ -1,18 +1,27 @@
 add_scc_lib(ssa
 	ssa-builder.c
-	ssa-printer.c
 	ssa-context.c
 	ssa-instr.c
 	ssa-value.c
 	ssa-block.c
 	ssa-module.c
-	ssaizer.c
-	ssaize-expr.c
-	ssaize-stmt.c
-	ssaize-decl.c
 	ssa-opt.c
 	ssa-pass.c
-	
+	ssa-pretty-print.c
+	ssa-llvm-pretty-print.c
+	ssa-emitter.h
+	ssa-emitter.c
+	ssa-emit-expr.c
+	ssa-emit-stmt.c
+	ssa-emit-decl.c
+	ssa-finish-module.c
+	ssa-printer.h
+	ssa-printer.c
+	ssa-constant-fold.c
+	ssa-dead-code-elimination.c
+	ssa-alloca-promotion.c
+	ssa-inline.c
+
 	DEPENDS
 	tree
 
