--- a/include/scc/CMakeLists.txt
+++ b/include/scc/CMakeLists.txt
@@ -1,5 +1,10 @@
-add_subdirectory(core)
-add_subdirectory(tree)
-add_subdirectory(c)
-add_subdirectory(ssa)
 add_subdirectory(cc)
+add_subdirectory(c-common)
+add_subdirectory(core)
+add_subdirectory(lex)
+add_subdirectory(semantics)
+add_subdirectory(ssa)
+add_subdirectory(ssa-emit)
+add_subdirectory(ssa-optimize)
+add_subdirectory(syntax)
+add_subdirectory(tree)
